--- a/index.html
+++ b/index.html
@@ -10,49 +10,48 @@
 
   <body class="overflow-x-hidden">
     <!-- nav -->
-    <nav class="flex isolate sticky z-[1] top-0 h-[72px] items-center justify-between bg-white px-4 py-6 shadow-md">
-      <span class="text-2xl text-gray-950"> giard<span class="font-black">design</span> </span>
-      <div class="gap-12 hidden">
-        <ul class="flex items-center gap-12">
-          <li class="flex gap-1">
-            <button id="offer-dropdown-button"
-              class="relative flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-500 hover:after:w-full">
-              <span id="offer-dropdown-button">Oferta</span>
-              <svg id="offer-dropdown-button" class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none"
-                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-              </svg>
-            </button>
-            <ul id="offer-dropdown"
-              class="absolute top-20 z-10 hidden rounded-md border border-gray-200 bg-white py-2 shadow-sm">
-              <li class="w-full px-4 py-2 hover:bg-gray-100">
-                <a href="#">Strony internetowe</a>
-              </li>
-              <li class="w-full px-4 py-2 hover:bg-gray-100">
-                <a href="#">Aplikacje</a>
-              </li>
-              <li class="w-full px-4 py-2 hover:bg-gray-100">
-                <a href="#">Sklepy internetowe</a>
-              </li>
-              <li class="w-full px-4 py-2 hover:bg-gray-100">
-                <a href="#">Blogi</a>
-              </li>
-            </ul>
-          </li>
-          <li
-            class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
-            <a href="#" class="text-gray-900">O firmie</a>
-          </li>
-          <li
-            class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
-            <a href="#" class="text-gray-900">Realizacje</a>
-          </li>
-          <li
-            class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
-            <a href="#" class="text-gray-900">Kontakt</a>
-          </li>
-        </ul>
-        <div class="relative mx-auto w-max">
+    <nav
+      class="flex isolate sticky z-[1] top-0 h-[72px] items-center justify-between bg-white px-4 py-6 shadow-md lg:px-20">
+      <span class="text-2xl"><span class="font-black">giard</span>design</span>
+      <ul class="hidden lg:flex items-center gap-12">
+        <li class="flex gap-1">
+          <button id="offer-dropdown-button"
+            class="relative flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-500 hover:after:w-full">
+            <span id="offer-dropdown-button">Oferta</span>
+            <svg id="offer-dropdown-button" class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none"
+              viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+            </svg>
+          </button>
+          <ul id="offer-dropdown"
+            class="absolute top-20 z-10 hidden rounded-md border border-gray-200 bg-white py-2 shadow-sm">
+            <li class="w-full px-4 py-2 hover:bg-gray-100">
+              <a href="#">Strony internetowe</a>
+            </li>
+            <li class="w-full px-4 py-2 hover:bg-gray-100">
+              <a href="#">Aplikacje</a>
+            </li>
+            <li class="w-full px-4 py-2 hover:bg-gray-100">
+              <a href="#">Sklepy internetowe</a>
+            </li>
+            <li class="w-full px-4 py-2 hover:bg-gray-100">
+              <a href="#">Blogi</a>
+            </li>
+          </ul>
+        </li>
+        <li
+          class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+          <a href="#" class="text-gray-900">O firmie</a>
+        </li>
+        <li
+          class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+          <a href="#" class="text-gray-900">Realizacje</a>
+        </li>
+        <li
+          class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
+          <a href="#" class="text-gray-900">Kontakt</a>
+        </li>
+        <li class="relative mx-auto w-max">
           <input type="search" id="search-input" placeholder=""
             class="relative z-10 h-12 w-12 cursor-pointer rounded-full border bg-transparent outline-none transition-all ease-in-out focus:w-full focus:pl-12 focus:pr-4 [&:not(:placeholder-shown)]:w-full" />
           <svg class="absolute inset-y-0 h-8 w-12 translate-y-1/4 stroke-gray-500 px-4"
@@ -61,13 +60,15 @@
             <path stroke-linecap="round" stroke-linejoin="round"
               d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
           </svg>
-        </div>
-      </div>
+        </li>
+      </ul>
+
     </nav>
 
     <!-- main -->
-    <main class="flex h-auto w-full items-center">
-      <section class="relative flex h-full w-full flex-col justify-center bg-[#DCC1AB] px-4 py-16">
+    <main class="flex isolate h-auto lg:h-[calc(100vh-72px)] w-full items-center">
+      <section
+        class="relative flex h-full w-full lg:w-1/2 flex-col justify-center bg-[#DCC1AB] px-4 py-16 lg:px-20 z-[1]">
         <h1 class="mb-12 text-6xl font-medium">Nowoczesna aranżacja Twojego ogrodu</h1>
         <p class="mb-20">Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy
           kompleksowy zakres usług z indywidualnym podejściem do każdego projektu.</p>
@@ -85,17 +86,48 @@
           </a>
         </ul>
       </section>
+      <div class="relative h-full hidden lg:block w-1/2 bg-transparent">
+        <img src="https://picsum.photos/600/600?random=0"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-0" />
+        <img src="https://picsum.photos/600/600?random=1"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-1" />
+        <img src="https://picsum.photos/600/600?random=2"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-2" />
+
+        <div class="absolute bottom-0 right-0 bg-[#F5F0EC]">
+          <button class="p-4" id="photo-previous">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="h-6 w-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+            </svg>
+          </button>
+          <button class="p-4" id="photo-next">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="h-6 w-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+            </svg>
+          </button>
+        </div>
+      </div>
     </main>
 
+    <section>
+      <div class="flex overflow-x-scroll">
+        <img src="https://picsum.photos/600/600?random=0" class="w-4/5" />
+        <img src="https://picsum.photos/600/600?random=1" class="w-4/5" />
+        <img src="https://picsum.photos/600/600?random=2" class="w-4/5" />
+      </div>
+    </section>
+
     <section class="flex px-4 h-auto py-16 w-full flex-col justify-center gap-12 bg-[#F5F0EC]">
-      <div>
+      <div class="lg:px-36">
         <small class="mb-4 block text-base text-[#1B5B31]">Oferta</small>
         <h2 class="mb-8 text-6xl font-medium">Działamy <span class="font-semibold italic">kompleksowo</span></h2>
         <p>Oferujemy kompletną obsługę inwestycji terenów zielonych. Projektujemy nowoczesne ogrody przydomowe oraz
           rezydencjonalne. Stworzymy dla Ciebie projekt, zwizualizujemy go i wcielimy w życie, a na każdym etapie
           posłużymy radą i wieloletnim doświadczeniem.</p>
       </div>
-      <div class="grid gap-8">
+      <div class="grid gap-8 lg:grid-flow-col">
         <div
           class="grid cursor-pointer rounded-xl bg-white p-8 transition-all duration-500 ease-in-out hover:shadow-lg">
           <svg class="mb-8 h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -157,8 +189,9 @@
       </div>
     </section>
 
-    <section class="flex h-auto py-16 px-4 bg-[#1B5B31] w-full items-center">
-      <div class="relative flex h-full w-full flex-col justify-center">
+    <section class="flex h-auto lg:h-screen bg-[#1B5B31] w-full items-center">
+      <img src="https://picsum.photos/600/600?random=0" class="h-full w-1/2 hidden lg:block" id="photo-4" />
+      <div class="relative flex h-full w-full flex-col justify-center px-4 py-16 lg:px-20">
         <small class="mb-4 block text-base text-white">O firmie</small>
         <h1 class="mb-12 text-6xl font-medium text-white">Tworzymy <br><span class="italic">z pasją</span></h1>
         <p class="mb-20 text-white">Każdy projekt to nowe wyzwanie. Dlatego nasz zespół tworzą wykwalifikowani
@@ -190,7 +223,7 @@
           </svg>
         </a>
       </div>
-      <div>
+      <div class="lg:px-36">
         <small class="mb-4 block text-base text-[#1B5B31]">Realizacje</small>
         <h2 class="mb-8 text-6xl font-medium">Nasze <span class="font-semibold italic">projekty</span></h2>
       </div>
@@ -224,15 +257,16 @@
         </div>
     </section>
 
-    <section class="flex items-center justify-center px-4 py-16 bg-[#1B5B31]">
-      <div class="flex flex-col items-center justify-center text-white gap-16">
-        <h3 class="text-5xl">Zostańmy w kontakcie!
+    <section class="flex items-center justify-center w-full p-4 bg-[#F5F0EC] lg:px-40 lg:py-16">
+      <div
+        class="bg-[#1B5B31] text-white gap-16 px-4 py-8 lg:py-32 w-full lg:flex lg:justify-between lg:items-center lg:px-16">
+        <h4 class="text-4xl mb-8 lg:mb-0">Zostańmy w kontakcie!
           <br>Znajdziesz nas na <span class="font-medium">Instagramie.</span>
-        </h3>
-        <div class="self-start">
-          <p class="mb-4">Śledź nasze najnowsze realizacje!</p>
+        </h4>
+        <div>
+          <p class="mb-2">Śledź nasze najnowsze realizacje!</p>
           <a href="#"
-            class="flex self-start items-center justify-center rounded-full bg-[#F5F0EC] px-6 py-3 focus:ring-4 hover:ring-2 hover:bg-[#F5F0EC]/50 hover:transition-all hover:ease-in-out focus:bg-[#F5F0EC]/50 focus:transition-all focus:ease-in-out text-[#1B5B31]">
+            class="flex items-center justify-center rounded-full bg-[#F5F0EC] px-6 py-3 focus:ring-4 hover:ring-2 hover:ring-[#F5F0EC]/50 hover:transition-all hover:ease-in-out focus:ring-[#F5F0EC]/50 focus:transition-all focus:ease-in-out text-[#1B5B31]">
             Instagram</a>
         </div>
       </div>
