--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pl">
 
   <head>
@@ -11,9 +11,9 @@
   <body class="overflow-x-hidden">
     <!-- nav -->
     <nav
-      class="flex isolate sticky z-[1] top-0 h-[72px] items-center justify-between bg-white px-4 py-6 shadow-md lg:px-20">
+      class="sticky top-0 isolate z-[1] flex h-[72px] items-center justify-between bg-white px-4 py-6 shadow-md lg:px-20">
       <span class="text-2xl"><span class="font-black">giard</span>design</span>
-      <ul class="hidden lg:flex items-center gap-12">
+      <ul class="hidden items-center gap-12 lg:flex">
         <li class="flex gap-1">
           <button id="offer-dropdown-button"
             class="relative flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-500 hover:after:w-full">
@@ -62,22 +62,26 @@
           </svg>
         </li>
       </ul>
-
     </nav>
 
     <!-- main -->
-    <main class="flex isolate h-auto lg:h-[calc(100vh-72px)] w-full items-center">
+    <main class="isolate flex h-auto w-full items-center lg:h-[calc(100vh-72px)]">
       <section
-        class="relative flex h-full w-full lg:w-1/2 flex-col justify-center bg-[#DCC1AB] px-4 py-16 lg:px-20 z-[1]">
-        <h1 class="mb-12 text-6xl font-medium">Nowoczesna aranżacja Twojego ogrodu</h1>
-        <p class="mb-20">Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy
-          kompleksowy zakres usług z indywidualnym podejściem do każdego projektu.</p>
+        class="relative z-[1] flex h-full w-full flex-col justify-center bg-[#DCC1AB] px-4 py-16 lg:w-1/2 lg:px-20">
+        <h1 class="mb-12 text-6xl font-medium">
+          Nowoczesna aranżacja Twojego ogrodu
+        </h1>
+        <p class="mb-20">
+          Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka
+          realizacji. Oferujemy kompleksowy zakres usług z indywidualnym
+          podejściem do każdego projektu.
+        </p>
         <ul class="flex flex-wrap gap-2">
           <a href="#"
-            class="rounded-full bg-[#1B5B31] px-6 py-3 text-white focus:ring-4 hover:ring-2 hover:ring-[#1B5B31]/50 hover:transition-all hover:ease-in-out focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
+            class="rounded-full bg-[#1B5B31] px-6 py-3 text-white hover:ring-2 hover:ring-[#1B5B31]/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
             Skontaktuj się z nami</a>
           <a href="#"
-            class="flex items-center gap-2 rounded-full border border-[#1B5B31] hover:ring-2 hover:ring-[#1B5B31]/50 hover:transition-all hover:ease-in-out px-6 py-3 text-[#1B5B31] focus:ring-4 focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
+            class="flex items-center gap-2 rounded-full border border-[#1B5B31] px-6 py-3 text-[#1B5B31] hover:ring-2 hover:ring-[#1B5B31]/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
             Zobacz nasze realizacje
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="h-4 w-4">
@@ -86,7 +90,7 @@
           </a>
         </ul>
       </section>
-      <div class="relative h-full hidden lg:block w-1/2 bg-transparent">
+      <div class="relative hidden h-full w-1/2 bg-transparent lg:block">
         <img src="https://picsum.photos/600/600?random=0"
           class="absolute h-full w-full transition-transform duration-1000" id="photo-0" />
         <img src="https://picsum.photos/600/600?random=1"
@@ -117,13 +121,18 @@
       <img src="https://picsum.photos/600/600?random=2" class="w-4/5" />
     </section>
 
-    <section class="flex px-4 h-auto py-16 w-full flex-col justify-center gap-12 bg-[#F5F0EC]">
+    <section class="flex h-auto w-full flex-col justify-center gap-12 bg-[#F5F0EC] px-4 py-16">
       <div class="lg:px-36">
         <small class="mb-4 block text-base text-[#1B5B31]">Oferta</small>
-        <h2 class="mb-8 text-6xl font-medium">Działamy <span class="font-semibold italic">kompleksowo</span></h2>
-        <p>Oferujemy kompletną obsługę inwestycji terenów zielonych. Projektujemy nowoczesne ogrody przydomowe oraz
-          rezydencjonalne. Stworzymy dla Ciebie projekt, zwizualizujemy go i wcielimy w życie, a na każdym etapie
-          posłużymy radą i wieloletnim doświadczeniem.</p>
+        <h2 class="mb-8 text-6xl font-medium">
+          Działamy <span class="font-semibold italic">kompleksowo</span>
+        </h2>
+        <p>
+          Oferujemy kompletną obsługę inwestycji terenów zielonych. Projektujemy
+          nowoczesne ogrody przydomowe oraz rezydencjonalne. Stworzymy dla
+          Ciebie projekt, zwizualizujemy go i wcielimy w życie, a na każdym
+          etapie posłużymy radą i wieloletnim doświadczeniem.
+        </p>
       </div>
       <div class="grid gap-8 lg:grid-flow-col">
         <div
@@ -134,8 +143,10 @@
               d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
           </svg>
           <h4 class="mb-4 block text-4xl">Projekty</h4>
-          <p class="mb-12">Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym wykorzystaniem istniejącej
-            przestrzeni.</p>
+          <p class="mb-12">
+            Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym
+            wykorzystaniem istniejącej przestrzeni.
+          </p>
           <a href="#"
             class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
             Dowiedz się więcej
@@ -154,8 +165,10 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
           </svg>
           <h4 class="mb-4 block text-4xl">Wizualizacje</h4>
-          <p class="mb-12">Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru animowanego w technologii
-            3D.</p>
+          <p class="mb-12">
+            Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru
+            animowanego w technologii 3D.
+          </p>
           <a href="#"
             class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
             Dowiedz się więcej
@@ -173,7 +186,9 @@
               d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.894 20.567L16.5 21.75l-.394-1.183a2.25 2.25 0 00-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 001.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 001.423 1.423l1.183.394-1.183.394a2.25 2.25 0 00-1.423 1.423z" />
           </svg>
           <h4 class="mb-4 block text-4xl">Realizacje</h4>
-          <p class="mb-12">Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i zaawansowanych technologii.
+          <p class="mb-12">
+            Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i
+            zaawansowanych technologii.
           </p>
           <a href="#"
             class="relative inline-flex w-fit items-center gap-2 self-end text-[#1B5B31] after:absolute after:-bottom-2 after:left-0 after:h-[0.0625rem] after:w-0 after:bg-[#1B5B31] after:transition-all after:duration-500 hover:after:w-full">
@@ -187,15 +202,21 @@
       </div>
     </section>
 
-    <section class="flex h-auto lg:h-screen bg-[#1B5B31] w-full items-center">
-      <img src="https://picsum.photos/600/600?random=0" class="h-full w-1/2 hidden lg:block" id="photo-4" />
+    <section class="flex h-auto w-full items-center bg-[#1B5B31] lg:h-screen">
+      <img src="https://picsum.photos/600/600?random=0" class="hidden h-full w-1/2 lg:block" id="photo-4" />
       <div class="relative flex h-full w-full flex-col justify-center px-4 py-16 lg:px-20">
         <small class="mb-4 block text-base text-white">O firmie</small>
-        <h1 class="mb-12 text-6xl font-medium text-white">Tworzymy <br><span class="italic">z pasją</span></h1>
-        <p class="mb-20 text-white">Każdy projekt to nowe wyzwanie. Dlatego nasz zespół tworzą wykwalifikowani
-          projektanci oraz architekci, których zadaniem jest rozpoznanie i realizacja potrzeb każdego Klienta. Nasza
-          specjalizacja to przestrzenie nowoczesne, które charakteryzuje minimalizm, geometria i elegancka prostota.
-          Tworzymy ogrody małoobsługowe, dostosowane do współczesnego trybu życia.</p>
+        <h1 class="mb-12 text-6xl font-medium text-white">
+          Tworzymy <br /><span class="italic">z pasją</span>
+        </h1>
+        <p class="mb-20 text-white">
+          Każdy projekt to nowe wyzwanie. Dlatego nasz zespół tworzą
+          wykwalifikowani projektanci oraz architekci, których zadaniem jest
+          rozpoznanie i realizacja potrzeb każdego Klienta. Nasza specjalizacja
+          to przestrzenie nowoczesne, które charakteryzuje minimalizm, geometria
+          i elegancka prostota. Tworzymy ogrody małoobsługowe, dostosowane do
+          współczesnego trybu życia.
+        </p>
         <div>
           <a href="#"
             class="inline-flex items-center gap-2 rounded-full border border-white px-6 py-3 text-white hover:ring-2 hover:ring-white/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-white/50 focus:transition-all focus:ease-in-out">
@@ -209,23 +230,25 @@
       </div>
     </section>
 
-    <section class="flex isolate relative w-full flex-col justify-center py-16 px-4 gap-12 bg-[#DCC1AB]">
+    <section class="relative isolate flex w-full flex-col justify-center gap-12 bg-[#DCC1AB] px-4 py-16">
       <div
-        class="flex justify-center items-end absolute bottom-0 left-0 h-[32rem] w-full z-[1] bg-gradient-to-b from-transparent to-[#DCC1AB]">
+        class="absolute bottom-0 left-0 z-[1] flex h-[32rem] w-full items-end justify-center bg-gradient-to-b from-transparent to-[#DCC1AB]">
         <a href="#"
           class="absolute bottom-24 inline-flex items-center gap-2 rounded-full border border-black px-6 py-3 text-black hover:ring-2 hover:ring-black/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-black/50 focus:transition-all focus:ease-in-out">
           Rozwiń
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" class="w-4 h-4">
+            stroke="currentColor" class="h-4 w-4">
             <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
           </svg>
         </a>
       </div>
       <div class="lg:px-36">
         <small class="mb-4 block text-base text-[#1B5B31]">Realizacje</small>
-        <h2 class="mb-8 text-6xl font-medium">Nasze <span class="font-semibold italic">projekty</span></h2>
+        <h2 class="mb-8 text-6xl font-medium">
+          Nasze <span class="font-semibold italic">projekty</span>
+        </h2>
       </div>
-      <div class="grid grid-cols-2 lg:grid-cols-3 gap-1 grid-flow-dense">
+      <div class="grid grid-flow-dense grid-cols-2 gap-1 lg:grid-cols-3">
         <div class="row-span-2">
           <img src="https://picsum.photos/600/600?random=0" class="h-full" />
         </div>
@@ -253,31 +276,33 @@
         <div>
           <img src="https://picsum.photos/600/600?random=8" class="h-full" />
         </div>
+      </div>
     </section>
 
-    <section class="flex items-center justify-center w-full p-4 bg-[#F5F0EC] lg:px-40 lg:py-16">
-      <div class="bg-[#1B5B31] text-white p-8 lg:py-32 w-full flex flex-wrap justify-between items-center lg:px-16">
-        <h4 class="text-4xl mb-8 lg:mb-0">Zostańmy w kontakcie!
-          <br>Znajdziesz nas na <span class="font-medium italic">Instagramie.</span>
+    <section class="flex w-full items-center justify-center bg-[#F5F0EC] p-4 lg:px-40 lg:py-16">
+      <div class="flex w-full flex-wrap items-center justify-between bg-[#1B5B31] p-8 text-white lg:px-16 lg:py-32">
+        <h4 class="mb-8 text-4xl lg:mb-0">
+          Zostańmy w kontakcie! <br />Znajdziesz nas na
+          <span class="font-medium italic">Instagramie.</span>
         </h4>
         <div>
           <p class="mb-2">Śledź nasze najnowsze realizacje!</p>
           <a href="#"
-            class="flex items-center justify-center rounded-full bg-[#F5F0EC] px-6 py-3 focus:ring-4 hover:ring-2 hover:ring-[#F5F0EC]/50 hover:transition-all hover:ease-in-out focus:ring-[#F5F0EC]/50 focus:transition-all focus:ease-in-out text-[#1B5B31]">
+            class="flex items-center justify-center rounded-full bg-[#F5F0EC] px-6 py-3 text-[#1B5B31] hover:ring-2 hover:ring-[#F5F0EC]/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-[#F5F0EC]/50 focus:transition-all focus:ease-in-out">
             Instagram</a>
         </div>
       </div>
     </section>
 
-    <footer class="bg-gray-950 px-4 lg:px-40 py-16 text-white">
-      <div class="flex justify-between items-center">
+    <footer class="bg-gray-950 px-4 py-16 text-white lg:px-40">
+      <div class="flex items-center justify-between">
         <span class="text-2xl"><span class="font-black">giard</span>design</span>
         <a href="#"
-          class="rounded-full bg-[#1B5B31] px-6 py-3 text-white focus:ring-4 hover:ring-2 hover:ring-[#1B5B31]/50 hover:transition-all hover:ease-in-out focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
+          class="rounded-full bg-[#1B5B31] px-6 py-3 text-white hover:ring-2 hover:ring-[#1B5B31]/50 hover:transition-all hover:ease-in-out focus:ring-4 focus:ring-[#1B5B31]/50 focus:transition-all focus:ease-in-out">
           Skontaktuj się z nami</a>
       </div>
-      <hr class="my-8 bg-white">
-      <div class="flex justify-between mb-8 lg:mb-32">
+      <hr class="my-8 bg-white" />
+      <div class="mb-8 flex justify-between lg:mb-32">
         <ul class="flex flex-col lg:flex-row lg:gap-16">
           <li>Kontakt</li>
           <li>Facebook</li>
@@ -285,14 +310,16 @@
           <li>Linkedin</li>
         </ul>
         <div class="flex-grow"></div>
-        <ul class="flex flex-col lg:flex-row lg:gap-16 mb-8 lg:mb-0">
+        <ul class="mb-8 flex flex-col lg:mb-0 lg:flex-row lg:gap-16">
           <li class="text-right lg:text-left">000-000-000</li>
-          <li><a href="mailto:giarddesign@kontakt.pl">giarddesign@kontakt.pl</a></li>
+          <li>
+            <a href="mailto:giarddesign@kontakt.pl">giarddesign@kontakt.pl</a>
+          </li>
         </ul>
       </div>
       <ul class="flex flex-wrap lg:justify-between">
         <li>Prawa zastrzeżone © 2022</li>
-        <li class="flex gap-1 items-center">
+        <li class="flex items-center gap-1">
           <span>made by</span>
           <a href="https://adrespect.pl">
             <svg width="119" height="24" viewBox="0 0 119 24" fill="none" xmlns="http://www.w3.org/2000/svg">
