--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <link rel="stylesheet" href="index.css" />
-    <script src="index.ts" type="module"></script>
+    <script src="search.ts" type="module"></script>
+    <script src="select.ts" type="module"></script>
+    <script src="slider.ts" type="module"></script>
   </head>
 
   <body class="overflow-x-hidden">
@@ -24,7 +26,7 @@
             </svg>
           </button>
           <ul id="offer-dropdown"
-            class="absolute top-20 z-10 hidden rounded-md border border-gray-200 bg-white py-2 shadow-sm">
+            class="absolute top-20 hidden rounded-md border border-gray-200 bg-white py-2 shadow-sm">
             <li class="w-full px-4 py-2 hover:bg-gray-100">
               <a href="#">Strony internetowe</a>
             </li>
@@ -53,8 +55,8 @@
         </li>
         <li class="relative mx-auto w-max">
           <input type="search" id="search-input" placeholder=""
-            class="relative z-10 h-12 w-12 cursor-pointer rounded-full border bg-transparent outline-none transition-all ease-in-out focus:w-full focus:pl-12 focus:pr-4 [&:not(:placeholder-shown)]:w-full" />
-          <svg class="absolute inset-y-0 h-8 w-12 translate-y-1/4 stroke-gray-500 px-4"
+            class="relative z-10 h-12 w-12 cursor-pointer rounded-full border bg-transparent outline-none transition-[width] duration-500 ease-in-out focus:w-48 focus:pl-12 focus:transition-[width] focus:duration-500 focus:ease-in-out [&:not(:placeholder-shown)]:w-48 [&:not(:placeholder-shown)]:pl-12" />
+          <svg class="absolute top-0 h-6 w-6 translate-x-1/2 translate-y-1/2 stroke-gray-500"
             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="h-6 w-6">
             <path stroke-linecap="round" stroke-linejoin="round"
@@ -66,8 +68,7 @@
 
     <!-- main -->
     <main class="isolate flex h-auto w-full items-center lg:h-[calc(100vh-72px)]">
-      <section
-        class="relative z-[1] flex h-full w-full flex-col justify-center bg-[#DCC1AB] px-4 py-16 lg:w-1/2 lg:px-20">
+      <section class="relative flex h-full w-full flex-col justify-center bg-[#DCC1AB] px-4 py-16 lg:w-1/2 lg:px-20">
         <h1 class="mb-12 text-6xl font-medium">
           Nowoczesna aranżacja Twojego ogrodu
         </h1>
@@ -90,7 +91,7 @@
           </a>
         </ul>
       </section>
-      <div class="relative hidden h-full w-1/2 bg-transparent lg:block">
+      <div class="relative hidden h-full w-1/2 overflow-hidden bg-transparent lg:block">
         <img src="https://picsum.photos/600/600?random=0"
           class="absolute h-full w-full transition-transform duration-1000" id="photo-0" />
         <img src="https://picsum.photos/600/600?random=1"
@@ -383,6 +384,32 @@
         </li>
       </ul>
     </footer>
+
+    <!-- <dialog open class="absolute top-48 w-screen h-full bg-transparent backdrop:bg-black">
+      <div class="relative hidden h-full w-1/2 bg-transparent lg:block translate-x-1/2 overflow-hidden">
+        <img src="https://picsum.photos/600/600?random=0"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-9" />
+        <img src="https://picsum.photos/600/600?random=1"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-10" />
+        <img src="https://picsum.photos/600/600?random=2"
+          class="absolute h-full w-full transition-transform duration-1000" id="photo-11" />
+
+        <div class="absolute w-full h-full">
+          <button class="absolute p-4 top-1/2 bg-[#F5F0EC]" id="photo-previous2">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="h-6 w-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+            </svg>
+          </button>
+          <button class="p-4 absolute top-1/2 bg-[#F5F0EC] right-0" id="photo-next2">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="h-6 w-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </dialog> -->
   </body>
 
 </html>
