--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <link rel="stylesheet" href="index.css" />
-    <script src="search.ts" type="module"></script>
-    <script src="select.ts" type="module"></script>
     <script src="slider.ts" type="module"></script>
   </head>
 
@@ -16,30 +14,31 @@
       class="sticky top-0 isolate z-[1] flex h-[72px] items-center justify-between bg-white px-4 py-6 shadow-md lg:px-20">
       <span class="text-2xl"><span class="font-black">giard</span>design</span>
       <ul class="hidden items-center gap-12 lg:flex">
-        <li class="flex gap-1">
-          <button id="offer-dropdown-button"
-            class="relative flex items-center gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-500 hover:after:w-full">
+        <li class="flex gap-1 relative group">
+          <button
+            class="flex items-center group gap-1 text-gray-900 after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-black after:transition-all after:duration-500 hover:after:w-full group">
             <span id="offer-dropdown-button">Oferta</span>
             <svg id="offer-dropdown-button" class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none"
               viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
             </svg>
+
+            <ul
+              class="absolute top-16 hidden rounded-md border border-gray-200 bg-white py-2 shadow-sm group-focus:z-[10] group-focus:grid whitespace-nowrap text-left w-auto">
+              <li class="w-full px-4 py-2 hover:bg-gray-100">
+                <a href="#">Strony internetowe</a>
+              </li>
+              <li class="w-full px-4 py-2 hover:bg-gray-100">
+                <a href="#">Aplikacje</a>
+              </li>
+              <li class="w-full px-4 py-2 hover:bg-gray-100">
+                <a href="#">Sklepy internetowe</a>
+              </li>
+              <li class="w-full px-4 py-2 hover:bg-gray-100">
+                <a href="#">Blogi</a>
+              </li>
+            </ul>
           </button>
-          <ul id="offer-dropdown"
-            class="absolute top-20 hidden rounded-md border border-gray-200 bg-white py-2 shadow-sm">
-            <li class="w-full px-4 py-2 hover:bg-gray-100">
-              <a href="#">Strony internetowe</a>
-            </li>
-            <li class="w-full px-4 py-2 hover:bg-gray-100">
-              <a href="#">Aplikacje</a>
-            </li>
-            <li class="w-full px-4 py-2 hover:bg-gray-100">
-              <a href="#">Sklepy internetowe</a>
-            </li>
-            <li class="w-full px-4 py-2 hover:bg-gray-100">
-              <a href="#">Blogi</a>
-            </li>
-          </ul>
         </li>
         <li
           class="relative after:absolute after:-bottom-6 after:left-0 after:h-[0.125rem] after:w-0 after:bg-gray-900 after:transition-all after:duration-500 hover:after:w-full">
@@ -203,7 +202,7 @@
       </div>
     </section>
 
-    <section class="flex h-auto w-full items-center bg-[#1B5B31] lg:h-screen">
+    <section class="flex h-auto w-full bg-[#1B5B31] lg:h-screen">
       <img src="https://picsum.photos/600/600?random=0" class="hidden h-full w-1/2 lg:block" id="photo-4" />
       <div class="relative flex h-full w-full flex-col justify-center px-4 py-16 lg:px-20">
         <small class="mb-4 block text-base text-white">O firmie</small>
@@ -318,7 +317,7 @@
           </li>
         </ul>
       </div>
-      <ul class="flex flex-wrap lg:justify-between">
+      <ul class="flex flex-col lg:flex-row lg:justify-between">
         <li>Prawa zastrzeżone © 2022</li>
         <li class="flex items-center gap-1">
           <span>made by</span>
